# face-recognition-deep-metric-learning

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build_test_fr_comia.bat  configure_test_fr_comia.bat  loggedbuild_test_fr_comia.bat  release_build_test_fr_comia.bat  release_configure_test_fr_comia.bat  run_release.bat  test_fr_comia.cpp
common/: common.cpp  common.h  remove_common.bat
face/: FaceDescriptor_dking.cpp  FaceDescriptor_dking.h
references/: davisking-dlib-models- Trained model files for dlib example programs-.url  dlib C++ Library- High Quality Face Recognition with Deep Metric Learning.url
resources/: .gitattributes
scripts/: debug-install-dlib.bat  install-debug.bat  install-release.bat  release-install-dlib.bat
